<resources>
    <string name="app_name">Wochat</string>
    <string name="splash_title_1">Welcome to Wochat</string>
    <string name="splash_agree_and_continue">Agree and Continue</string>
    <string name="splash_read_our_terms">Read our Privacy Policy. Tap Agree and continue to accept the Terms of Service</string>
    <string name="splash_read_terms">Read our %1$s. Tap \"Agree and Continue\" to accept the %2$s.</string>
    <string name="splash_terms">&lt;a href="http://wochat.io/privacy">Terms of Service&lt;/a></string>
    <string name="splash_privacy">&lt;a href="http://wochat.io/privacy">Privacy Policy&lt;/a></string>
    <string name="msg_permissions_explan_title">Permission Request</string>
    <string name="msg_permissions_explan_body">To easily connect with friends and family, and send and receive photos and videos, allow Wochat access to your contacts and your device\'s photos, media and files.</string>
    <string name="msg_permissions_explan_ok_btn">Continue</string>
    <string name="msg_permissions_explan_cancel_btn">Not now</string>
    <string name="reg_page_phone_title">YOUR PHONE</string>
    <string name="reg_page_code_title">ENTER SMS CODE</string>
    <string name="reg_page_pic_title">YOUR PROFILE PICTURE</string>
    <string name="reg_phone_num_progress_body">Connecting</string>
    <string name="reg_code_progress_body">Verifying</string>
    <string name="reg_pic_progress_body">Registering</string>
    <string name="reg_phone_num_title">Your Phone</string>
    <string name="reg_phone_num_text">Please confirm your country code and enter your phone number</string>
    <string name="reg_code_title">Enter Code</string>
    <string name="reg_code_text">Wochat sent you an SMS with a confirmation code to the phone number below.  %s</string>
    <string name="reg_code_wrong_num">&lt;a href="">Wrong number?&lt;/a></string>
    <string name="error_sms_code_verification_num_digits">code must be 6 decimal digits</string>
    <string name="error_sms_code_verification_invalid_code">wrong code</string>
    <string name="error_sms_code_verification_general_error">error, please try again</string>
    <string name="error_reg_pic_enter_name">Enter your name here.</string>
    <string name="msg_error_title">Error</string>
    <string name="msg_error_general_body">An error occurred, please try again later</string>
    <string name="msg_error_comm_body">Communication error occurred, please try again later</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Chats</string>
    <string name="tab_text_2">Calls</string>
    <string name="msg_invite_friend_body">Download WoChat! The first universal language chat! https://app.appsflyer.com/io.wochat.app?pid=invitefriends.</string>
    <string name="msg_invite_friend_title">Download WoChat!</string>
    <string name="refresh_contacts_progress_body">Refreshing…</string>
    <string name="chat_title">Chats</string>
    <string name="calls_title">Calls</string>
    <string name="camera_title">Camera</string>
    <string name="hint_enter_a_message">Type a message...</string>
    <string name="hint_slide_to_cancel">Slide to cancel</string>
    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string name="last_seen_today">last seen today at</string>
    <string name="last_seen_yesterday">last seen yesterday at</string>
    <string name="last_seen_past_week">last seen</string>
    <string name="last_seen_past">last seen</string>
    <string name="online">Online</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="stt_error_network_timeout">Network operation timed out</string>
    <string name="stt_error_network">Network Error</string>
    <string name="stt_error_permissions">Insufficient permissions</string>
    <string name="stt_error_client">Internal error</string>
    <string name="stt_error_no_match">No recognition result matched</string>
    <string name="stt_error_recognizer_busy">Recognition service is busy</string>
    <string name="search_select_contacts">Select Contacts</string>
    <string name="search_select_contact">Select Contact</string>
    <string name="search_frwrd_to">Forward to...</string>
    <string name="reply_contact_self_name">You</string>
    <string name="reply_image_msg_text">Image</string>
    <string name="reply_video_msg_text">Video %s</string>
    <string name="reply_audio_msg_text">Audio %s</string>
    <string name="settings_translation_language">Translation Language</string>
    <string name="settings_default_translation_language">English (USA)</string>
    <string name="settings_bug_report">Bug Report</string>
    <string name="settings_invite_friends">Invite Friends</string>
    <string name="settings_help_and_support">Help and support</string>
    <string name="settings_actionbar_title">Settings</string>
    <string name="settings_profile_edit_actionbar_title">Profile</string>
    <string name="settings_profile_edit_name_title">Name</string>
    <string name="settings_profile_edit_status_title">About</string>
    <string name="settings_profile_edit_phone_title">Phone</string>
    <string name="settings_user_default_phone">No phone</string>
    <string name="dialog_save_button_text">Save</string>
    <string name="dialog_default_negative_button_text">Cancel</string>
    <string name="settings_profile_edit_dialog_name_title">Enter Your Name</string>
    <string name="settings_profile_edit_dialog_status_title">Add About</string>
    <string name="settings_profile_edit_dialog_empty_string_warning">Name can\'t be empty</string>
    <string name="settings_translation_languages_actionbar_title">Translation Language</string>
    <string name="settings_invite_friends_invitation_text">Download Wochat! The first universal language chat!</string>
    <string name="reply_location_msg_text">Location</string>
    <string name="settings_invite_friends_download_link">‏http://wochat.io/download</string>
    <string name="settings_help_link">http://wochat.io/</string>
    <string name="title_activity_info">InfoActivity</string>
</resources>